# tauri-plugin-rudderstack

./: Cargo.toml  README.md  build.rs  justfile  package.json  pnpm-lock.yaml
dist-js/: bindings.d.ts  index.cjs  index.d.ts  index.js
examples/: rate_limiter_example.rs
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: bindings.ts  index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: send_analytics_alias.toml  send_analytics_group.toml  send_analytics_identify.toml  send_analytics_page.toml  send_analytics_screen.toml  send_analytics_track.toml
permissions/schemas/: schema.json
src/: analytics_ext.rs  anonymous_id.rs  commands.rs  config.rs  lib.rs  rate_limiters.rs  rudder_wrapper.rs  types.rs
