[package]
name = "tauri-plugin-rudderstack"
version = "0.3.0"
description = "Rudderstack plugin for Tauri"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-rudderstack"
authors = ["elefant ai", "Night-Hunter"]
edition = "2021"


[dependencies]
serde = { version = "1", features = ["derive"] }
specta = { version = "2.0.0-rc.22", features = ["bigdecimal", "serde_json", "chrono"] }
tauri-specta = { version = "2.0.0-rc.21", features = [
    "derive",
    "typescript",
] }
tauri = { version = "2.2", features = ["wry"] }
thiserror = "2"
serde_json = "1"
tracing = "0.1"
uuid = { version = "1.11", features = ["v4"] }
specta-typescript = { version = "0.0.9", optional = true}
rudderanalytics = "1.1.4"
chrono = "0.4"
specta-util = "^0.0.9"
dashmap = "6.1"

[features]
default = []
build-types = ["specta-typescript"]

[build-dependencies]
tauri-plugin = { version = "2.0", features = ["build"] }
